change style user page

--- a/src/assets/globalization/i18n/es.json
+++ b/src/assets/globalization/i18n/es.json
@@ -17,6 +17,14 @@
                 "description":"Descripcion",
                 "application": "Aplicacion"
             }
+        },
+        "report":{
+            "actual":{
+                "title": "actual"
+            },
+            "history":{
+                "title":"Historico"
+            }
         }
     }
 }
