add retries page form controls

--- a/src/assets/globalization/i18n/en.json
+++ b/src/assets/globalization/i18n/en.json
@@ -22,7 +22,7 @@
                 "title": "Services",
                 "description": "Administrate Services"
             },
-            "retry":{
+            "retry": {
                 "title": "Retries",
                 "description": "Adminitrate retries"
             }
@@ -56,6 +56,17 @@
             "history": {
                 "title": "Hist1orico"
             }
+        },
+        "retry": {
+            "filter": "Filters",
+            "result": "Results",
+            "applications": "Applications",
+            "services": "Services",
+            "message": "Message Id",
+            "initialDate": "Initial Date",
+            "finalDate": "Final Date",
+            "consumer": "Consumer"
         }
+
     }
 }
