add message validation required to service detail update page

--- a/src/assets/globalization/i18n/en.json
+++ b/src/assets/globalization/i18n/en.json
@@ -41,7 +41,10 @@
             "xml": "View Xml",
             "close": "Close",
             "update": "Update",
-            "edit": "Edit"
+            "edit": "Edit",
+            "error": {
+                "required": "This field is required"
+            }
         },
         "user": {
             "title": "Adminis1tradores",
