--- a/src/assets/globalization/i18n/en.json
+++ b/src/assets/globalization/i18n/en.json
@@ -42,6 +42,7 @@
             "close": "Close",
             "update": "Update",
             "edit": "Edit",
+            "delete": "Delete",
             "errorService": "An error has occurred, try again later",
             "error": {
                 "required": "This field is required"
