cancel and retry transaction -> transactions, and bulk action

--- a/src/assets/globalization/i18n/es.json
+++ b/src/assets/globalization/i18n/es.json
@@ -44,6 +44,7 @@
             "edit": "Editar",
             "delete": "Eliminar",
             "errorService": "Se ha presentado un error, intentalo mas tarde",
+            "actions":"Acciones",
             "error": {
                 "required": "Este campo es requerido"
             }
@@ -105,6 +106,7 @@
             "finalDate": "Fecha Final",
             "consumer": "Consumidor",
             "transactions": "Transacciones",
+            "selectedTransactions": "Transacciones Seleccionadas",
             "results": {
                 "consumer": "Consumidor",
                 "application": "Aplicación",
