add button to see the details of service on the retry and retry history

--- a/src/assets/globalization/i18n/es.json
+++ b/src/assets/globalization/i18n/es.json
@@ -112,6 +112,7 @@
             "consumer": "Consumidor",
             "transactions": "Transacciones",
             "selectedTransactions": "Transacciones Seleccionadas",
+            "viewDetailService": "Ver Detalle Servicio",
             "results": {
                 "consumer": "Consumidor",
                 "application": "Aplicación",
