add filter operation to retry and history retry

--- a/src/assets/globalization/i18n/es.json
+++ b/src/assets/globalization/i18n/es.json
@@ -113,6 +113,7 @@
             "transactions": "Transacciones",
             "selectedTransactions": "Transacciones Seleccionadas",
             "viewDetailService": "Ver Detalle Servicio",
+            "operations":"Operaciones",
             "results": {
                 "consumer": "Consumidor",
                 "application": "Aplicación",
