--- a/src/assets/globalization/i18n/es.json
+++ b/src/assets/globalization/i18n/es.json
@@ -12,7 +12,7 @@
         },
         "sideNav": {
             "user": {
-                "title": "Administrar Usuario",
+                "title": "Gestionar Administradores",
                 "description": ""
             },
             "application": {
@@ -119,6 +119,8 @@
             "viewDetailService": "Ver Detalle Servicio",
             "operations":"Operaciones",
             "results": {
+                "iib": "IIB",
+                "uuid": "UUID",
                 "consumer": "Consumidor",
                 "application": "Aplicación",
                 "service": "Servicio",
@@ -130,7 +132,8 @@
                 "error": "Error",
                 "xml": "Xml",
                 "actions": "Acciones",
-                "retry": "Reintentar"
+                "retry": "Reintentar",
+                "receiveDate": "Fecha Recepción"
             },
             "history": {
                 "back": "View Grid"
